Fix problems on extra white space at the right side of the screen

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,7 +74,7 @@
 }
 
 .parallelogram-background {
-  width: 88%;
+  width: 1600px;
   height: auto;
   position: relative;
   transform: skewX(-8deg);
